add scss and html for winners

--- a/src/components/try-list/try-list.html
+++ b/src/components/try-list/try-list.html
@@ -18,5 +18,11 @@
 }
 
 @else{
-<h1> You are the winner!!! </h1>
+  <div class="win-page">
+    <div class="win-card">
+      <div class="icon">🏆</div>
+      <h1>You win!</h1>
+      <p>Well done! You have successfully completed the challenge.</p>
+    </div>
+  </div>
 }
