--- a/src/components/try-list/try-list.scss
+++ b/src/components/try-list/try-list.scss
@@ -51,3 +51,46 @@ button:disabled {
   cursor: not-allowed;
 }
 
+/* רקע כללי */
+.win-page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 50px 0;
+  text-align: center;
+}
+
+/* כרטיס מעוצב */
+.win-card {
+  background: #ffffff;
+  padding: 40px 55px;
+  border-radius: 20px;
+  box-shadow: 0 6px 20px rgba(0,0,0,0.15);
+  max-width: 460px;
+  border: 2px solid #e6e6e6;
+}
+
+/* אייקון גביע */
+.icon {
+  font-size: 85px;
+  margin-bottom: 15px;
+}
+
+/* כותרת */
+.win-card h1 {
+  font-size: 42px;
+  font-weight: 800;
+  margin-bottom: 10px;
+
+
+  color: linear-gradient(135deg, #2ecc71, #78e08f);;
+
+  text-shadow: 0 2px 8px rgba(0,0,0,0.15);
+}
+
+/* טקסט */
+.win-card p {
+  font-size: 19px;
+  color: #444;
+  margin: 0;
+}
